--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = "http://example.org/"
-languageCode = "en-us"
-title = "Learn to code"
+languageCode = "hu-hu"
+title = "Programozás kezdőknek"
 theme = "ananke"
