--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "https://petiaccja.github.io/LearnToCode/"
 languageCode = "hu-hu"
 title = "Programozás kezdőknek"
 theme = "ananke"
