--- a/appveyor.yml
+++ b/appveyor.yml
@@ -61,11 +61,10 @@ build_script:
 #---------------------------------#
 
 on_success:
-  - cmd: |-
-    mkdir C:\projects\gen
-    xcopy public C:\projects\gen\public
-    git checkout gh-pages
-    xcopy C:\projects\gen\public\* .
+  - mkdir C:\projects\gen
+  - xcopy public C:\projects\gen\public
+  - git checkout gh-pages
+  - xcopy C:\projects\gen\public\* .
   - git commit -a -m "Updates generated files"
   - git push
   - git checkout master
