--- a/appveyor.yml
+++ b/appveyor.yml
@@ -64,7 +64,7 @@ on_success:
   - mkdir C:\projects\gen
   - xcopy /S public C:\projects\gen\
   - git checkout gh-pages
-  - xcopy /S C:\projects\gen\public\* .
+  - xcopy /S C:\projects\gen\public .
   - git commit -a -m "Updates generated files"
   - git push
   - git checkout master
